--- a/test/basic_tests/index.html
+++ b/test/basic_tests/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3/brython.min.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3/brython_stdlib.js"></script>
-        <script type="text/javascript" src="./brue/brue.js"></script>
+        <script type="text/javascript" src="./brython.js"></script>
+        <script type="text/javascript" src="./brython_stdlib.js"></script>
+        <link rel="shortcut icon" href="./assets/favicon.ico">
     </head>
     <body onload="brython({ debug: 1 });">
         <app-main></app-main>
-        <script type="text/python3" src="./main.py"></script>
+        <script type="text/python3">
+        import main
+        </script>
     </body>
 </html>
